// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component displays title and content 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3>
    foo
  </h3>
  <p>
    bar
  </p>
</div>
`;

exports[`Card component renders empty if no title or content is given 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3 />
  <p />
</div>
`;
